syntax = "proto3";

import "google/protobuf/wrappers.proto";

package graph_description;

// Identity types
message Session {
    // Such as the pid + assetid
    repeated string primary_key_properties = 1;
    bool primary_key_requires_asset_id = 2;
    string created_time = 3;
    string last_seen_time = 4;
    string terminated_time = 5;
}

message Static {
    repeated string primary_key_properties = 1;
    bool primary_key_requires_asset_id = 2;
}

message IdStrategy {
    oneof strategy {
        Session session = 1;
        Static static = 2;
    }
}

message NodeProperty {
    oneof property {
        uint64 increment_only_uint_prop = 1;
        uint64 decrement_only_uint_prop = 3;
        uint64 immutable_uint_prop = 5;
        int64 increment_only_int_prop = 2;
        int64 decrement_only_int_prop = 4;
        int64 immutable_int_prop = 6;
        string immutable_str_prop = 7;
    }
}

message NodeDescription {
    map<string, NodeProperty> properties = 1;
    string node_key = 2;
    string node_type = 3;
    repeated IdStrategy id_strategy = 8;
}

message IdentifiedNode {
    map<string, NodeProperty> properties = 1;
    string node_key = 3;
    string node_type = 4;
}

message MergedNode {
    map<string, NodeProperty> properties = 1;
    uint64 uid = 2;
    string node_key = 3;
    string node_type = 4;
}

message Edge {
    string from = 1;
    string to = 2;
    string edgeName = 3;
}

message MergedEdge {
    string from_uid = 1;
    string from_node_key = 2;
    string to_uid = 3;
    string to_node_key = 4;
    string edgeName = 5;
}

message EdgeList {
    repeated Edge edges = 1;
}

message MergedEdgeList {
    repeated MergedEdge edges = 1;
}

message GraphDescription {
    map <string, NodeDescription> nodes = 1;
    map <string, EdgeList> edges = 2;
}

message IdentifiedGraph{
    map <string, IdentifiedNode> nodes = 1;
    map <string, EdgeList> edges = 2;
}

message MergedGraph{
    map <string, MergedNode> nodes = 1;
    map <string, MergedEdgeList> edges = 2;
}
